last commit redo

--- a/pages/gsu.html
+++ b/pages/gsu.html
@@ -20,7 +20,7 @@
             <a class="top-nav-4" href="mailto:contact@prnjlk.com">CONTACT</a>
         </div>
         <div id=herologo>
-            <img id="prnjlk" src="../images/logo_blue.svg" alt="logo">
+            <img id="prnjlk" src="../images/gsu_head.svg" alt="logo">
         </div>
     </div>
 
