--- a/pages/thocclab.html
+++ b/pages/thocclab.html
@@ -20,11 +20,13 @@
             <a class="top-nav-4" href="mailto:contact@prnjlk.com">CONTACT</a>
         </div>
         <div id=herologo>
-            <img id="prnjlk" src="../images/logo_blue.svg" alt="logo">
+            <img id="prnjlk" src="../images/thocclab_head.svg" alt="logo">
         </div>
     </div>
 
-   <p>THOCCLAB is a branding project for Perth's custom mechanical keyboard community's first service provider 
+   <p>
+    <!--
+    THOCCLAB is a branding project for Perth's custom mechanical keyboard community's first service provider 
     connecting enthusiasts to services such as custom CNC, laser cutting, 3-D printing as well as design and 
     production services for custom cases and keycaps so they can take their desk setup customisation to the next 
     level. THOCCLAB will offer members discounted, in-house laser-cutting, 3-D printing and CNC services as well 
@@ -65,6 +67,8 @@
     Suppliers will be designing, uploading and selling their goods and services as well as communicating with 
     customers to provide consultations on uploaded designs, modifying designs with them as well as producing 
     and delivering custom goods.
+
+   -->
     </p>
 
     
