--- a/pages/elsie.html
+++ b/pages/elsie.html
@@ -20,10 +20,11 @@
             <a class="top-nav-4" href="mailto:contact@prnjlk.com">CONTACT</a>
         </div>
         <div id=herologo>
-            <img id="head" src="../images/elsie_tile.svg" alt="logo">
+            <img id="head" src="../images/elsie_head.svg" alt="logo">
         </div>
     </div>
 <p>
+    <!--
     Elsie is a mobile app designed for Curtin University students to easily access a lot of the functions available 
     to them through the OASIS webapp. Elsie also aims to provide quick access to core elements of Blackboard, another 
     learning management system. This project outlines a redesign of Elsie from the purposes it serves to the interface 
@@ -61,6 +62,8 @@
     ole purpose is to make the LMS functions available to the students, more accessible which we can further explore 
     to design an app which reduces the students' need to log into the larger LMS sites managed by the university 
     when they are on the go.
+
+-->
 </p>
 
     
